added comments template index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>Suppedi</title>
+  <meta name="description" content="Suppedi totebag 3D printed accessories goodies serigraphy">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <!-- Style links -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito|Pacifico" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -21,8 +24,39 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <!--
+  ********** Start Header **********
+  -->
+
+  <!-- Header Title -->
+
+  <!-- Navigation Bar -->
+
+  <!--
+  ********** End Header **********
+  -->
+
+  <!--
+  ********** Start Main **********
+  -->
+
+  <!--
+  ********** End Main **********
+  -->
+
+  <!--
+  ********** Start Footer **********
+  -->
+
+  <!-- Social Network Links -->
+
+  <!-- Reglementations Links -->
+  
+  <!--
+  ********** End Footer **********
+  -->
+
+  <!-- Script -->
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
