added header html index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,34 @@
   <!--
   ********** Start Header **********
   -->
-
-  <!-- Header Title -->
-
+  <header>
+    <h1>Suppedi</h1>
   <!-- Navigation Bar -->
+    <nav>
+      <ul>
+        <li>
+          <i class="fas fa-bars"></i>
+        </li>
+        <li>
+          <i class="fas fa-home"><a href="index.html"></a></i>
+        </li>
+        <li>
+          <div class="search-container">
+            <form action="/action_page.php">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </div>
+        </li>
+        <li>
+          <i class="fas fa-shopping-basket"><a href="cart.html"></a></i>
+        </li>
+        <li>
+          <i class="fas fa-user"><a href="login.html"></a></i>
+        </li>
+      </ul>
+    </nav>
+</header>
 
   <!--
   ********** End Header **********
@@ -51,7 +75,7 @@
   <!-- Social Network Links -->
 
   <!-- Reglementations Links -->
-  
+
   <!--
   ********** End Footer **********
   -->
