--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <i class="fas fa-bars"></i>
         </li>
         <li>
-          <i class="fas fa-home"><a href="index.html"></a></i>
+          <a href="index.html"><i class="fas fa-home"></i></a>
         </li>
         <li>
           <div class="search-container">
@@ -47,10 +47,10 @@
           </div>
         </li>
         <li>
-          <i class="fas fa-shopping-basket"><a href="cart.html"></a></i>
+          <a href="cart.html"><i class="fas fa-shopping-basket"></i></a>
         </li>
         <li>
-          <i class="fas fa-user"><a href="login.html"></a></i>
+          <a href="login.html"><i class="fas fa-user"></i></a>
         </li>
       </ul>
     </nav>
@@ -71,11 +71,24 @@
   <!--
   ********** Start Footer **********
   -->
-
+  <footer>
   <!-- Social Network Links -->
-
+    <ul>
+      <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
+      <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
+      <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
+    </ul>
   <!-- Reglementations Links -->
-
+    <nav>
+      <ul>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="#">Conditions générales d'utilisation</a></li>
+        <li><a href="#">Données personnelles</a></li>
+      </ul>
+    </nav>
+  </footer>
   <!--
   ********** End Footer **********
   -->
