--- a/index.html
+++ b/index.html
@@ -113,14 +113,16 @@
   ********** Start Footer **********
   -->
   <footer>
-  <!-- Social Network Links -->
-    <ul>
-      <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
-      <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
-      <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    </ul>
+  <!-- Social Network Links -->`
+    <div class="socialmedia-icons">
+      <ul>
+        <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
+        <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
+        <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
+      </ul>
+    </div>
   <!-- Reglementations Links -->
     <nav>
       <ul>
