modif index.html

--- a/index.html
+++ b/index.html
@@ -78,30 +78,31 @@
     <section class="bestsellers">
       <h2>Nos Bestsellers</h2>
       <div class="bestsellersdisplay">
-      <a href="shop.html">
-        <img src="img/bodypositivequeen.jpeg" alt="totebag body positive queen"/>
-      </a>
-      <a href="shop.html">
-        <img src="img/boite-bijou-casier-rangement.png" alt="boite bijoux casier rangement"/>
-      </a>
-      <a href="shop.html">
-        <img src="img/cosmetic-case-diamond-blanc.jpeg" alt="boite rangement capitons blanc"/>
-      </a>
-      <a href="shop.html">
-        <img src="img/makeup-rangement.jpg" alt="rangement makeup impression 3D"/>
-      </a>
+        <a href="shop.html">
+          <img src="img/bodypositivequeen.jpeg" alt="totebag body positive queen"/>
+        </a>
+        <a href="shop.html">
+          <img src="img/boite-bijou-casier-rangement.png" alt="boite bijoux casier rangement"/>
+        </a>
+        <a href="shop.html">
+          <img src="img/cosmetic-case-diamond-blanc.jpeg" alt="boite rangement capitons blanc"/>
+        </a>
+        <a href="shop.html">
+          <img src="img/makeup-rangement.jpg" alt="rangement makeup impression 3D"/>
+        </a>
+      </div>
     </section>
     <section class="articles">
       <h2>News & Articles</h2>
       <article>
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi. Etiam venenatis erat ultricies mi pellentesque blandit. Donec vitae magna lectus. Quisque euismod nisi sed urna molestie gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        <a href="#"> Lire plus &gt&gt </a></p>
+        <a href="#"> Lire plus &gt;&gt;</a>
       </article>
       <article>
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi. Etiam venenatis erat ultricies mi pellentesque blandit. Donec vitae magna lectus. Quisque euismod nisi sed urna molestie gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        <a href="#"> Lire plus &gt&gt </a></p>
+        <a href="#"> Lire plus &gt;&gt;</a>
       </article>
     </section>
   </main>
