--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <h1>Suppedi</h1>
   <!-- Navigation Bar -->
-    <nav>
+    <nav class="headnav">
       <ul>
         <li>
           <div class="responsivenav">
@@ -49,8 +49,8 @@
         <li>
           <div class="search-container">
             <form action="/action_page.php">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <input type="text" placeholder="" name="search">
+              <button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
         </li>
@@ -62,7 +62,7 @@
         </li>
       </ul>
     </nav>
-</header>
+  </header>
   <!--
   ********** End Header **********
   -->
@@ -75,9 +75,9 @@
       <h2>Bienvenue sur le site de Suppedi</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi.</p>
     </section>
-    <section class="bestsellers">
+    <section class="bestsellers-section">
       <h2>Nos Bestsellers</h2>
-      <div class="bestsellersdisplay">
+      <div class="bestsellers">
         <a href="shop.html">
           <img src="img/bodypositivequeen.jpeg" alt="totebag body positive queen"/>
         </a>
@@ -92,14 +92,14 @@
         </a>
       </div>
     </section>
-    <section class="articles">
+    <section class="article-section">
       <h2>News & Articles</h2>
-      <article>
+      <article class="main-article">
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi. Etiam venenatis erat ultricies mi pellentesque blandit. Donec vitae magna lectus. Quisque euismod nisi sed urna molestie gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         <a href="#"> Lire plus &gt;&gt;</a>
       </article>
-      <article>
+      <article class="main-article">
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi. Etiam venenatis erat ultricies mi pellentesque blandit. Donec vitae magna lectus. Quisque euismod nisi sed urna molestie gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         <a href="#"> Lire plus &gt;&gt;</a>
@@ -125,7 +125,7 @@
       </ul>
     </div>
   <!-- Reglementations Links -->
-    <nav>
+    <nav class="footnav">
       <ul>
         <li><a href="#">Mentions légales</a></li>
         <li><a href="#">Conditions générales d'utilisation</a></li>
