--- a/prices.html
+++ b/prices.html
@@ -30,7 +30,7 @@
   <header>
     <h1>Suppedi</h1>
   <!-- Navigation Bar -->
-    <nav>
+    <nav class="headnav">
       <ul>
         <li>
           <div class="responsivenav">
@@ -49,8 +49,8 @@
         <li>
           <div class="search-container">
             <form action="/action_page.php">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <input type="text" placeholder="" name="search">
+              <button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
         </li>
@@ -62,8 +62,7 @@
         </li>
       </ul>
     </nav>
-</header>
-
+  </header>
   <!--
   ********** End Header **********
   -->
@@ -72,7 +71,32 @@
   ********** Start Main **********
   -->
   <main>
-
+    <section class="tab">
+      <h2>Nos Services</h2>
+      <table>
+        <tr>
+          <th>Service</th>
+          <th>Prix</th>
+        </tr>
+        <tr>
+          <td>Sérigraphie T-shirt</td>
+          <td>3 euros</td>
+        </tr>
+        <tr>
+          <td>Sérigraphie Totebag</td>
+          <td>5 euros</td>
+        </tr>
+        <tr>
+          <td>Goodies Impression 3D</td>
+          <td>5 euros</td>
+        </tr>
+        <tr>
+          <td>Découpe Vynile</td>
+            <td>*selon produit</td>
+        </tr>
+      </table>
+      <p class="cta">Des questions? Un devis à réaliser?</p> <button class="send-btn" type="submit"><a href="contact.html">Contactez-nous !</a></button>
+    </section>
   </main>
   <!--
   ********** End Main **********
@@ -82,16 +106,18 @@
   ********** Start Footer **********
   -->
   <footer>
-  <!-- Social Network Links -->
-    <ul>
-      <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
-      <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
-      <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    </ul>
+  <!-- Social Network Links -->`
+    <div class="socialmedia-icons">
+      <ul>
+        <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
+        <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
+        <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
+      </ul>
+    </div>
   <!-- Reglementations Links -->
-    <nav>
+    <nav class="footnav">
       <ul>
         <li><a href="#">Mentions légales</a></li>
         <li><a href="#">Conditions générales d'utilisation</a></li>
