--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
   <header>
     <h1>Suppedi</h1>
   <!-- Navigation Bar -->
-    <nav>
+    <nav class="headnav">
       <ul>
         <li>
           <div class="responsivenav">
@@ -49,8 +49,8 @@
         <li>
           <div class="search-container">
             <form action="/action_page.php">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <input type="text" placeholder="" name="search">
+              <button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
         </li>
@@ -62,8 +62,7 @@
         </li>
       </ul>
     </nav>
-</header>
-
+  </header>
   <!--
   ********** End Header **********
   -->
@@ -72,7 +71,33 @@
   ********** Start Main **********
   -->
   <main>
-
+    <section class="product-listing">
+      <h2>Nos produits</h2>
+      <p>Résultat de la recherche</p>
+      <div class="productsresult">
+        <div class="product">
+          <img src="img/bodypositivequeen.jpeg" alt="totebag body positive queen"/>
+          <p>Totebag Body Positive Queen</p>
+          <button class="shop-btn" type="button"><a href="shop.html">Acheter</a></button>
+        </div>
+        <div class="product">
+          <img src="img/boite-bijou-casier-rangement.png" alt="boite bijoux casier rangement"/>
+          <p>Boîte à bijoux</p>
+          <button class="shop-btn" type="button"><a href="shop.html">Acheter</a></button>
+        </div>
+        <div class="product">
+          <img src="img/cosmetic-case-diamond-blanc.jpeg" alt="boite rangement capitons blanc"/>
+          <p>Boîte de rangement</p>
+          <button class="shop-btn" type="button"><a href="shop.html">Acheter</a></button>
+        </div>
+        <div class="product">
+          <img src="img/makeup-rangement.jpg" alt="rangement makeup impression 3D"/>
+          <p>Rangement pour pinceaux et make-up</p>
+          <button class="shop-btn" type="button"><a href="shop.html">Acheter</a></button>
+        </div>
+      </div>
+      <p class="nextpage"><a href="products.html">Page suivante</a></p>
+    </section>
   </main>
   <!--
   ********** End Main **********
@@ -82,16 +107,18 @@
   ********** Start Footer **********
   -->
   <footer>
-  <!-- Social Network Links -->
-    <ul>
-      <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
-      <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
-      <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    </ul>
+  <!-- Social Network Links -->`
+    <div class="socialmedia-icons">
+      <ul>
+        <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
+        <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
+        <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
+      </ul>
+    </div>
   <!-- Reglementations Links -->
-    <nav>
+    <nav class="footnav">
       <ul>
         <li><a href="#">Mentions légales</a></li>
         <li><a href="#">Conditions générales d'utilisation</a></li>
