--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
   <header>
     <h1>Suppedi</h1>
   <!-- Navigation Bar -->
-    <nav>
+    <nav class="headnav">
       <ul>
         <li>
           <div class="responsivenav">
@@ -49,8 +49,8 @@
         <li>
           <div class="search-container">
             <form action="/action_page.php">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
+              <input type="text" placeholder="" name="search">
+              <button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
         </li>
@@ -62,7 +62,7 @@
         </li>
       </ul>
     </nav>
-</header>
+  </header>
 
   <!--
   ********** End Header **********
@@ -72,7 +72,22 @@
   ********** Start Main **********
   -->
   <main>
-
+    <p><a href="products.html">Retour aux resultats</a></p>
+    <section class="product-shop">
+      <h2 class="product-name">Boîte à bijoux Daisy</h2>
+      <div class="product-image">
+        <img src="img/boite-bijou-casier-rangement.png" alt="boite bijoux casier rangement"/>
+          <p>Catégorie: <a href="#">Rangement</a></p>
+          <p>Disponible</p>
+      </div>
+      <div class="product-info">
+        <p>Modèle Daisy</p>
+        <p>Collection <a href="#">Boudoir</a></p>
+        <p class="product-price">15 €</p>
+        <button class="shop-btn" type="button"><a href="shop.html">Acheter</a></button>
+      </div>
+      <div class="product-desc">
+        <p>Boîte de rangement Daisy <br>Idéal pour ranger ses bijoux et accessoires</p>
   </main>
   <!--
   ********** End Main **********
@@ -82,16 +97,18 @@
   ********** Start Footer **********
   -->
   <footer>
-  <!-- Social Network Links -->
-    <ul>
-      <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
-      <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
-      <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    </ul>
+  <!-- Social Network Links -->`
+    <div class="socialmedia-icons">
+      <ul>
+        <li><a href ="https://facebook.com" class="fa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href ="https://instagram.com" class="fa" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href ="https://pinterest.com" class="fa" target="_blank"><i class="fab fa-pinterest"></i></a></li>
+        <li><a href ="https://youtube.com" class="fa" target="_blank"><i class="fab fa-youtube"></i></a></li>
+        <li><a href ="https://twitter.com" class="fa" target="_blank"><i class="fab fa-twitter"></i></a></li>
+      </ul>
+    </div>
   <!-- Reglementations Links -->
-    <nav>
+    <nav class="footnav">
       <ul>
         <li><a href="#">Mentions légales</a></li>
         <li><a href="#">Conditions générales d'utilisation</a></li>
