--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <main>
     <section class="presentation">
       <h2>Bienvenue sur le site de Suppedi</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in purus nulla. Cras in posuere ipsum. Vivamus et semper augue, non euismod nisi.</p>
+      <p class="intro">* Nouvelle collection Boudoir *</p>
     </section>
     <section class="bestsellers-section">
       <h2>Nos Bestsellers</h2>
