--- a/prices.html
+++ b/prices.html
@@ -72,10 +72,10 @@
   -->
   <main>
     <section class="tab">
-      <h2>Nos Services</h2>
+      <h2>Nos Prestations</h2>
       <table>
         <tr>
-          <th>Service</th>
+          <th>Prestation</th>
           <th>Prix</th>
         </tr>
         <tr>
@@ -92,10 +92,10 @@
         </tr>
         <tr>
           <td>Découpe Vynile</td>
-            <td>*selon produit</td>
+          <td>*selon produit</td>
         </tr>
       </table>
-      <p class="cta">Des questions? Un devis à réaliser?</p> <button class="send-btn" type="submit"><a href="contact.html">Contactez-nous !</a></button>
+      <p class="cta">Des questions ? <br> Un devis à réaliser? <br> <button class="send-btn" type="submit"><a href="contact.html">Contactez-nous !</a></button></p>
     </section>
   </main>
   <!--
